cleaned up some mess that persisted after project pause :w

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -1,22 +1,22 @@
 TOPDIR := $(dir $(abspath $(lastword $(MAKEFILE_LIST))))
 
-BINARY		= armspi
+BINARY		= main
 
 DEVICE		= stm32f103c8t6
 
 TOOLCHAIN_DIR	= ../libopencm3
 
-TARGET		= DSTM32F1
+TARGET		= STM32F1
 
 CROSS_PREFIX	?= arm-none-eabi-
 CC		= $(CROSS_PREFIX)gcc
 OBJCOPY		= $(CROSS_PREFIX)objcopy
 SIZE		= $(CROSS_PREFIX)size
 
-CFLAGS		= -Wall -Wextra -std=gnu99 -I../libopencm3/include -I../lib -I ../common -$(TARGET) -mcpu=cortex-m3 -mthumb -fno-common -ffreestanding -Og -g
+CFLAGS		= -Wall -Wextra -std=gnu99 -I../libopencm3/include -I../lib -I ../common -D$(TARGET) -mcpu=cortex-m3 -mthumb -fno-common -ffreestanding -Og -g
 LDSCRIPT	?= $(BINARY).ld
-LDFLAGS		= -lopencm3_stm32f1 -L../libopencm3/lib -larmspi -L../lib -mthumb -mcpu=cortex-m3 -nostartfiles -Wl,--gc-sections -flto -T $(LDSCRIPT)
-OBJ		= $(BINARY).o
+LDFLAGS		= -lopencm3_stm32f1 -L../libopencm3/lib  -mthumb -mcpu=cortex-m3 -nostartfiles -Wl,--gc-sections -flto -T $(LDSCRIPT)
+OBJ		= $(BINARY).o armspi.o
 
 all: $(BINARY).bin
 
@@ -31,7 +31,7 @@ $(BINARY).elf: $(OBJ)
 	$(CC) $(CFLAGS) -c -o $@ $^
 
 flash: $(BINARY).bin
-	echo "reset halt; flash write_image erase unlock $(TOPDIR)/armspi.bin 0x8000000; reset" | nc 127.0.0.1 4444
+	echo "reset halt; flash write_image erase unlock $(TOPDIR)$(BINARY).bin 0x8000000; reset" | nc 127.0.0.1 4444
 
 clean:
 	rm -f *.o $(BINARY).elf $(BINARY).bin
