--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,4 +1,5 @@
-LIBRARY		= libarmspi
+PREFIX		= lib
+LIBRARY		= armspi
 
 TOOLCHAIN_DIR	= ../libopencm3
 
@@ -13,15 +14,15 @@ AR		= $(CROSS_PREFIX)ar
 CFLAGS		= -Wall -Wextra -std=gnu99 -I../libopencm3/include -I ../common -D$(TARGET) -mcpu=cortex-m3 -mthumb -fno-common -ffreestanding -Og -g
 OBJ		= $(LIBRARY).o
 
-all: $(LIBRARY).a
+all: $(PREFIX)$(LIBRARY).a
 
-$(LIBRARY).a: $(OBJ)
+$(PREFIX)$(LIBRARY).a: $(OBJ)
 	$(AR) -crs $@ $^
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c -o $@ $^
 
 clean:
-	rm -f *.o $(LIBRARY).a
+	rm -f *.o $(PREFIX)$(LIBRARY).a
 
 .PHONY: all clean
