changed the linkerskript

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -14,7 +14,7 @@ OBJCOPY		= $(CROSS_PREFIX)objcopy
 SIZE		= $(CROSS_PREFIX)size
 
 CFLAGS		= -Wall -Wextra -std=gnu99 -I../libopencm3/include -I../lib -I ../common -D$(TARGET) -mcpu=cortex-m3 -mthumb -fno-common -ffreestanding -Og -o 0 -g
-LDSCRIPT	?= $(BINARY).ld
+LDSCRIPT	?= stm32-h103.ld
 LDFLAGS		= -lopencm3_stm32f1 -L../libopencm3/lib  -mthumb -mcpu=cortex-m3 -nostartfiles -Wl,--gc-sections -flto -T $(LDSCRIPT)
 OBJ		= $(BINARY).o armspi.o
 
